--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "main.h": "c",
         "cstdlib": "c",
         "typeinfo": "c",
-        "cmath": "c"
+        "cmath": "c",
+        "types.h": "c"
     }
 }
